--- a/styles/style.css
+++ b/styles/style.css
@@ -12,4 +12,5 @@ h1, input, p{
 button{
     background-color: #0078FF; /* color de fondo */
     color:white; /* color del texto */
+    padding: 12px; /* aumentamos el tamaño del botón */
 }
